--- a/Scommettitore/pom.xml
+++ b/Scommettitore/pom.xml
@@ -36,6 +36,13 @@
 			<artifactId>json</artifactId>
 			<version>20200518</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+		<dependency>
+			<groupId>jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
